--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -8,14 +8,15 @@
         "npm": "v14.0.0,v16.0.0"
     },
     "dependencies": {
-        "@emotion/react": "^11.4.0",
-        "@emotion/styled": "^11.3.0",
+        "@emotion/react": "^11.12.0",
+        "@emotion/styled": "^11.12.0",
         "@material-ui/core": "^5.0.0-beta.0",
         "@material-ui/data-grid": "^4.0.0-alpha.33",
         "@material-ui/icons": "^5.0.0-beta.0",
         "@material-ui/lab": "^5.0.0-alpha.39",
         "@material-ui/styles": "^5.0.0-beta.0",
         "@material-ui/utils": "^5.0.0-beta.0",
+        "@mui/material": "^5.16.4",
         "@tabler/icons": "^1.39.1",
         "@testing-library/jest-dom": "^5.11.10",
         "@testing-library/react": "^11.2.6",
@@ -32,6 +33,7 @@
         "react-apexcharts": "^1.3.7",
         "react-device-detect": "^1.17.0",
         "react-dom": "^17.0.2",
+        "react-icons": "^5.2.1",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.3",
         "react-router": "^5.2.0",
